5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4006/executions/1671_1100.log
== TEST (2019-04-24 15:15:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao tesatar sua solução, não se limite ao caso de exemplo.
a = int(input("valor de uma cedula"))
print("Entrada:a")

-- OUTPUT:
Entrada:a
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:15:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao tesatar sua solução, não se limite ao caso de exemplo.
a = int(input("valor de uma cedula"))
print("Entrada:a")

-- OUTPUT:
Entrada:a
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:16:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao tesatar sua solução, não se limite ao caso de exemplo.
a = int(input("valor de uma cedula"))
print("Entrada:","a")

-- OUTPUT:
Entrada: a
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:16:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao tesatar sua solução, não se limite ao caso de exemplo.
a = int(input("valor de uma cedula"))
print("Entrada:","a")

-- OUTPUT:
Entrada: a
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:17:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao tesatar sua solução, não se limite ao caso de exemplo.
a = int(input("valor de uma cedula"))
print("Entrada:","a")
else (a==2):
	print("Animal:","Tartaruga")

-- ERROR:
File "XXXX", line 6
    else (a==2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:18:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao tesatar sua solução, não se limite ao caso de exemplo.
a = int(input("valor de uma cedula"))
print("Entrada:","a")
else 
	print("Animal:","Tartaruga")

-- ERROR:
File "XXXX", line 6
    else 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:18:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao tesatar sua solução, não se limite ao caso de exemplo.
a = int(input("valor de uma cedula"))
print("Entrada:","a")
if (a==2):
	print("Animal:","Tartaruga")

-- OUTPUT:
Entrada: a
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:19:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao tesatar sua solução, não se limite ao caso de exemplo.
v = int(input("valor de uma cedula"))
print("Entrada:","v")
if (a==2):
	print("Animal:","Tartaruga")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if (a==2):
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:19:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao tesatar sua solução, não se limite ao caso de exemplo.
v = int(input("valor de uma cedula"))
print("Entrada:","v")
if (v==2):
	print("Animal:","Tartaruga")

-- OUTPUT:
Entrada: v
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:19:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao tesatar sua solução, não se limite ao caso de exemplo.
v = int(input("valor de uma cedula"))
print("Entrada:",v)
if (v==2):
	print("Animal:","Tartaruga")

-- OUTPUT:
Entrada: 100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:23:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao tesatar sua solução, não se limite ao caso de exemplo.
v = int(input("valor de uma cedula"))
print("Entrada:",v)
if (v==2):
	print("Animal:","Tartaruga")
elif(v==5):
	print("Animal:","Garca")
elif(v==10):
	print("Animal:","Arara")
elif(v==20):
	print("Animal:","Mico-leao-dourado")

-- OUTPUT:
Entrada: 100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:23:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao tesatar sua solução, não se limite ao caso de exemplo.
v = int(input("valor de uma cedula"))
print("Entrada:",v)
if (v==2):
	print("Animal:","Tartaruga")
elif(v==5):
	print("Animal:","Garca")
elif(v==10):
	print("Animal:","Arara")
elif(v==20):
	print("Animal:","Mico-leao-dourado")

-- EXECUTION TIME:
0.155438
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:25:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao tesatar sua solução, não se limite ao caso de exemplo.
v = int(input("valor de uma cedula"))
print("Entrada:",v)
if (v==2):
	print("Animal:","Tartaruga")
elif(v==5):
	print("Animal:","Garca")
elif(v==10):
	print("Animal:","Arara")
elif(v==20):
	print("Animal:","Mico-leao-dourado")
elif(v==50):
	print("Animal:","Onca-pintada")
elif(v==100):
	print("Animal:","Garoupa")

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:25:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao tesatar sua solução, não se limite ao caso de exemplo.
v = int(input("valor de uma cedula"))
print("Entrada:",v)
if (v==2):
	print("Animal:","Tartaruga")
elif(v==5):
	print("Animal:","Garca")
elif(v==10):
	print("Animal:","Arara")
elif(v==20):
	print("Animal:","Mico-leao-dourado")
elif(v==50):
	print("Animal:","Onca-pintada")
elif(v==100):
	print("Animal:","Garoupa")

-- EXECUTION TIME:
0.20224
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:25:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao tesatar sua solução, não se limite ao caso de exemplo.
v = int(input("valor de uma cedula"))
print("Entrada:",v)
if (v==2):
	print("Animal:","Tartaruga")
elif(v==5):
	print("Animal:","Garca")
elif(v==10):
	print("Animal:","Arara")
elif(v==20):
	print("Animal:","Mico-leao-dourado")
elif(v==50):
	print("Animal:","Onca-pintada")
elif(v==100):
	print("Animal:","Garoupa")

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:26:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao tesatar sua solução, não se limite ao caso de exemplo.
v = int(input("valor de uma cedula"))
print("Entrada:",v)
if (v==2):
	print("Animal:","Tartaruga")
elif(v==5):
	print("Animal:","Garca")
elif(v==10):
	print("Animal:","Arara")
elif(v==20):
	print("Animal:","Mico-leao-dourado")
elif(v==50):
	print("Animal:","Onca-pintada")
elif(v==100):
	print("Animal:","Garoupa")

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:26:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao tesatar sua solução, não se limite ao caso de exemplo.
v = int(input("valor de uma cedula"))
print("Entrada:",v)
if (v==2):
	print("Animal:","Tartaruga")
elif(v==5):
	print("Animal:","Garca")
elif(v==10):
	print("Animal:","Arara")
elif(v==20):
	print("Animal:","Mico-leao-dourado")
elif(v==50):
	print("Animal:","Onca-pintada")
elif(v==100):
	print("Animal:","Garoupa")

-- EXECUTION TIME:
0.146221
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:28:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao tesatar sua solução, não se limite ao caso de exemplo.
v = int(input("valor de uma cedula"))
print("Entrada:",v)
if (v==2):
	print("Animal:","Tartaruga")
elif(v==5):
	print("Animal:","Garca")
elif(v==10):
	print("Animal:","Arara")
elif(v==20):
	print("Animal:","Mico-leao-dourado")
elif(v==50):
	print("Animal:","Onca-pintada")
elif(v==100):
	print("Animal:","Garoupa")
else:
	print("Animal:","invalido")

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:28:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao tesatar sua solução, não se limite ao caso de exemplo.
v = int(input("valor de uma cedula"))
print("Entrada:",v)
if (v==2):
	print("Animal:","Tartaruga")
elif(v==5):
	print("Animal:","Garca")
elif(v==10):
	print("Animal:","Arara")
elif(v==20):
	print("Animal:","Mico-leao-dourado")
elif(v==50):
	print("Animal:","Onca-pintada")
elif(v==100):
	print("Animal:","Garoupa")
else:
	print("Animal:","invalido")

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:28:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao tesatar sua solução, não se limite ao caso de exemplo.
v = int(input("valor de uma cedula"))
print("Entrada:",v)
if (v==2):
	print("Animal:","Tartaruga")
elif(v==5):
	print("Animal:","Garca")
elif(v==10):
	print("Animal:","Arara")
elif(v==20):
	print("Animal:","Mico-leao-dourado")
elif(v==50):
	print("Animal:","Onca-pintada")
elif(v==100):
	print("Animal:","Garoupa")
else:
	print("Animal:","invalido")

-- EXECUTION TIME:
0.142419
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:28:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao tesatar sua solução, não se limite ao caso de exemplo.
v = int(input("valor de uma cedula"))
print("Entrada:",v)
if (v==2):
	print("Animal:","Tartaruga")
elif(v==5):
	print("Animal:","Garca")
elif(v==10):
	print("Animal:","Arara")
elif(v==20):
	print("Animal:","Mico-leao-dourado")
elif(v==50):
	print("Animal:","Onca-pintada")
elif(v==100):
	print("Animal:","Garoupa")
else:
	print("Animal:","invalido")

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:28:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao tesatar sua solução, não se limite ao caso de exemplo.
v = int(input("valor de uma cedula"))
print("Entrada:",v)
if (v==2):
	print("Animal:","Tartaruga")
elif(v==5):
	print("Animal:","Garca")
elif(v==10):
	print("Animal:","Arara")
elif(v==20):
	print("Animal:","Mico-leao-dourado")
elif(v==50):
	print("Animal:","Onca-pintada")
elif(v==100):
	print("Animal:","Garoupa")
else:
	print("Animal:","invalido")

-- EXECUTION TIME:
0.241202
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:28:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao tesatar sua solução, não se limite ao caso de exemplo.
v = int(input("valor de uma cedula"))
print("Entrada:",v)
if (v==2):
	print("Animal:","Tartaruga")
elif(v==5):
	print("Animal:","Garca")
elif(v==10):
	print("Animal:","Arara")
elif(v==20):
	print("Animal:","Mico-leao-dourado")
elif(v==50):
	print("Animal:","Onca-pintada")
elif(v==100):
	print("Animal:","Garoupa")
else:
	print("Animal:","Invalido")

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:28:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao tesatar sua solução, não se limite ao caso de exemplo.
v = int(input("valor de uma cedula"))
print("Entrada:",v)
if (v==2):
	print("Animal:","Tartaruga")
elif(v==5):
	print("Animal:","Garca")
elif(v==10):
	print("Animal:","Arara")
elif(v==20):
	print("Animal:","Mico-leao-dourado")
elif(v==50):
	print("Animal:","Onca-pintada")
elif(v==100):
	print("Animal:","Garoupa")
else:
	print("Animal:","Invalido")

-- EXECUTION TIME:
0.144029
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
